--- a/timeline.html
+++ b/timeline.html
@@ -3,11 +3,16 @@
 <head>
 	<title>Timeline</title>
 	<link rel="stylesheet" type="text/css" href="timeline.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<script type="text/javascript" src="common.js"></script>
 </head>
 <body>
-	<div class=""></div>
-
+	<div class="timeline-example">ABCDD</div>
+	<div class="timeline-example">ABCDD</div>
+	<div class="timeline-example">ABCDD</div>
+	<div class="timeline-example">ABCDD</div>
+	<div class="timeline-example">ABCDD</div>
+	<div class="timeline-example">ABCDD</div>
 </body>
 </html>
