--- a/timeline.html
+++ b/timeline.html
@@ -2,17 +2,13 @@
 <html>
 <head>
 	<title>Timeline</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="timeline.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<script type="text/javascript" src="common.js"></script>
 </head>
 <body>
-	<div class="timeline-example">ABCDD</div>
-	<div class="timeline-example">ABCDD</div>
-	<div class="timeline-example">ABCDD</div>
-	<div class="timeline-example">ABCDD</div>
-	<div class="timeline-example">ABCDD</div>
-	<div class="timeline-example">ABCDD</div>
+	<div class="timeline-example"></div>
 </body>
 </html>
