--- a/timeline.html
+++ b/timeline.html
@@ -4,7 +4,8 @@
 	<title>Timeline</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="timeline.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+	<script src="jquery.js"></script>
 	<script type="text/javascript" src="timeline.js"></script>
 	<script type="text/javascript" src="common.js"></script>
 </head>
